--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
   <string name="sign_in_activity_submit">Submit</string>
   <string name="sign_in_activity_password">Password</string>
   <string name="sign_in_activity_email">E-mail</string>
+  <string name="sign_in_activity_title">Welcome</string>
+  <string name="sign_in_activity_subtitle">Please authenticate using \nthe below form:</string>
+  <string name="sign_up_activity_title">Account\nCreation</string>
+  <string name="sign_up_activity_subtitle">Please, fill in the fields \nto register</string>
+  <string name="sign_up_activity_name">Name</string>
+  <string name="sign_up_activity_email">E-mail</string>
+  <string name="sign_up_activity_password">Password</string>
 </resources>
