--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,19 @@
 <resources>
   <string name="app_name">party</string>
+
   <string name="sign_in_activity_submit">Submit</string>
   <string name="sign_in_activity_password">Password</string>
   <string name="sign_in_activity_email">E-mail</string>
   <string name="sign_in_activity_title">Welcome</string>
   <string name="sign_in_activity_subtitle">Please authenticate using \nthe below form:</string>
+  <string name="sign_in_activity_link_sign_up"><u>Sign Up</u></string>
+
   <string name="sign_up_activity_title">Account\nCreation</string>
   <string name="sign_up_activity_subtitle">Please, fill in the fields \nto register</string>
   <string name="sign_up_activity_name">Name</string>
   <string name="sign_up_activity_email">E-mail</string>
   <string name="sign_up_activity_password">Password</string>
+  <string name="sign_up_activity_back_to_login"><u>Back to login</u></string>
+  <string name="sign_up_activity_submit">Submit</string>
+
 </resources>
